add bun run start

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.8.3"
   },
   "scripts": {
+    "start": "bun run index.ts",
     "dev": "bun run --watch index.ts"
   },
   "dependencies": {
